ajout du drapeau francais en mode chinois

--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylecss" />
+    <link rel="stylesheet" href="style.css" />
     <script src="./flexbox/script.js"></script>
     <title>flexbox</title>
 </head>
 
 <body>
-
+    <div class="flex-parent1">
+        <div class="enfant1">A</div>
+        <div class="enfant2">b</div>
+        <div class="enfant3">c</div>
+        <div class="enfant4">d</div>
+        <div class="enfant5">e</div>
+    </div>
 </body>
 
 </html>
